# review-classifier

./: .gitignore  README.md  main.py  pyproject.toml  testing.py  training.py
model/: tokenizer.pkl
model_config/: classifier.ipynb  classifier.py  dataset_splitting.py  testing.py  training.py
